# MLFromScratch

./: CMakeLists.txt  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  Neuron.h  OutputLayer.cpp  OutputLayer.h  main.cpp
src/: InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  Neuron.cpp  NumTools.cpp  NumTools.h  NumberRecognition.cpp  NumberRecognition.h  OutputLayer.cpp  OutputLayer.h  Visualizer.cpp  Visualizer.h  main.cpp
